Cambios en los subtítulos del informe

--- a/Alura_Store_Latam.ipynb
+++ b/Alura_Store_Latam.ipynb
@@ -2134,13 +2134,78 @@
         "calificaciones = resumen_calificacion['Calificación']\n",
         "costos = resumen_costos['Costo de Envio']\n",
         "\n",
-        "diferencia = round(costos[0] - costos[3], 2)"
+        "diferencia = round(costos[0] - costos[3], 2)\n",
+        "\n",
+        "costos"
       ],
       "metadata": {
-        "id": "frJAKf6CmWH9"
+        "id": "frJAKf6CmWH9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 210
+        },
+        "outputId": "ddea8179-ae9d-4b73-b125-273e727a3d4d"
       },
-      "execution_count": 76,
-      "outputs": []
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    26018.61\n",
+              "1    25216.24\n",
+              "2    24805.68\n",
+              "3    23459.46\n",
+              "Name: Costo de Envio, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Costo de Envio</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>26018.61</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>25216.24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>24805.68</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>23459.46</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2227,7 +2292,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Análisis de datos**##\n",
+        "##**Análisis de datos**\n",
         "\n",
         "###**Análisis de facturación**\n",
         "\n",
@@ -2252,7 +2317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Análisis de categorías más vendidas**\n",
+        "###**Análisis de categorías más vendidas**\n",
         "\n",
         "La categorías más vendidas para las cuatro tiendas son:\n",
         "- Muebles\n",
@@ -2305,7 +2370,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Análisis de productos más y menos vendidos**\n",
+        "###**Análisis de productos más y menos vendidos**\n",
         "\n",
         "A partir del análisis de categorías más vendidas se obtuvo que la tienda 1 destaca en las categorías electrodomésticos y electrónicos. Por lo cuál, en el gráfico 3.1 podemos ver que los productos más vendidos corresponden a esas dos categorías. No obstante, a pesar de estar en el tercer lugar en número de ventas en muebles, tambíen se encuentran entre los productos más vendidos muebles.\n",
         "\n",
@@ -2375,7 +2440,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En la tienda 4 restaltan la venta de los productos de la categoría muebles, electrónicos y juguetes, siendo líder de ventas en esta última. Si observamos en la figura 3.4, vemos que entre sus artículos más vendidos se encuentran muebles y juguetes. Sin embargo, también aparecen productos de las categorías artículos para el hogar y libros. Además, hay que destacar que los muebles que más venden son los mismos que más vende la tienda 3.\n",
+        "En la tienda 4 resaltan la venta de los productos de la categoría muebles, electrónicos y juguetes, siendo líder de ventas en esta última. Si observamos en la figura 3.4, vemos que entre sus artículos más vendidos se encuentran muebles y juguetes. Sin embargo, también aparecen productos de las categorías artículos para el hogar y libros. Además, hay que destacar que los muebles que más venden son los mismos que más vende la tienda 3.\n",
         "\n",
         "Por otra parte, como lo sugiere el gráfico 2, los artículos que venden menos la tienda 4 son electrodomésticos. También, encontramos artículos pertenecientes a las categorías menos populares como libros e instrumentos musicales. Aunque, notablemente, figura el artículo armario como uno de los menos vendidos."
       ],
@@ -2397,7 +2462,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Análisis de calificación de los clientes y costo de envío**"
+        "###**Análisis de calificación de los clientes y costo de envío**"
       ],
       "metadata": {
         "id": "tHSMVOGfzxNw"
@@ -2440,7 +2505,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**CONCLUSIÓN**"
+        "##**Conclusión**"
       ],
       "metadata": {
         "id": "clrIE6s5S40A"
@@ -2454,7 +2519,7 @@
         "- La tienda 4 vende artículos con menor precio como muebles y juguetes.\n",
         "- La tienda 4 vende productos similares a la tienda 3, por lo cual puede haber una superposición entre estas dos tiendas.\n",
         "- La calificación de la tienda 4 es similar a la calificación de las otras tiendas.\n",
-        "- La diferencia del costo de envío entre la tienda 4 y la tienda 1 es de alrededor $2600, por lo cuál puede ser una diferencia que puede ser compensada para que el costo de la tienda 1 sea similar a las de las otras tiendas."
+        "- La diferencia del costo de envío entre la tienda 4 y la tienda 1 es de alrededor $2600, por lo cual esta diferencia puede ser compensada para que el costo de la tienda 1 sea similar a las de las otras tiendas."
       ],
       "metadata": {
         "id": "ek2wDxgdS55q"
