--- a/Alura_Store_Latam.ipynb
+++ b/Alura_Store_Latam.ipynb
@@ -2277,7 +2277,7 @@
       "cell_type": "markdown",
       "source": [
         "##**Introducción**\n",
-        "Informe sobre el análisis de datos de las tiendas del Señor Juan. El objetivo del mismo es generar el conocimiento necesario para que el señor Juan pueda tomar una decisión sobre cuál de las tiendas de la cadena Alura Store debe vender. La conclusión final se basa en el análisis de las siguientes cuatro variables:\n",
+        "Informe sobre el análisis de datos de las tiendas del Señor Juan. El objetivo del mismo es generar el conocimiento necesario para que identificar cual es la tienda más ineficiente y que el Señor Juan pueda tomar una decisión sobre cuál de las tiendas de la cadena Alura Store debe vender. La conclusión final se basa en el análisis de las siguientes cuatro variables:\n",
         "- Facturación por tienda. 💰\n",
         "- Ventas por categoría por tiendas. 💻\n",
         "- Productos más y menos vendidos por tienda. 🎸\n",
